removed permissions api method
